--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -251,5 +251,5 @@ plugins_js  = []
 ## Marketing
 ############################
 [marketing]
-  google_analytics = ""
+  google_analytics = "UA-151017890-1"
   google_tag_manager = ""
